Add pii filter. CAR-44
